css/index.css
/* ... */
.action-btn:hover {
  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
}

.action-btn:focus {
  background: #008552;
}

.section-dash-splitter {
  display: block;
  clear: both;
  width: 48px;
  border: 0 solid transparent;
  border-bottom: 4px solid var(--theme-green-color);
  border-radius: 24px;
}

#about-me-section {
  display: flex;
  flex-direction: column;
  padding-bottom: 24px;
  background-image: url('../images/illustration-1-about-me-mobile.svg'), url('../images/illustration-2-about-me-mobile.svg');
  background-position: top right, bottom left;
  background-repeat: no-repeat;
}

#about-me-section .about-me-description {
  margin-top: 0;
  padding-bottom: 24px;
}

#skill-categories {
  grid-template-areas: 'skill-category';
  list-style-type: none;
}

#skill-categories .skill-category {
  height: 352px;
  background: var(--card-bg-color);
}

#skill-categories .skill-category .skill-icon {
  display: inline-flex;
  background: #fff;
  width: 80px;
  height: 80px;
  min-height: 80px;
  border-radius: 50%;
  margin: 40px 0;
  box-shadow: 0 16px 24px rgba(37, 47, 137, 0.08);
}

#skill-categories .skill-category .skill-title {
  color: #344563;
  margin: 24px 0;
}

#skill-categories .skill-category .skill-stack {
  list-style-type: none;
  padding: 0;
  flex-flow: row wrap;
}

#skill-categories .skill-category .skill-stack li {
  padding: 12px;
  white-space: normal;
  background: #fff;
  font-size: 12px;
  font-weight: 600;
  border-radius: 8px;
  color: var(--theme-green-color);
  margin: 8px;
}

#contact-me-form,
.message-fields {
  gap: 24px;
}

#contact-me-form > * {
  border-radius: 4px;
  outline: none;
}

#contact-me-form .message-fields input {
  border: 1px solid var(--card-border-color);
  padding: 15px 16px;
  outline: none;
  border-radius: 4px;
}

#contact-me-form .message-fields textarea {
  outline: none;
  border: 1px solid #60c095;
  padding: 12px;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  height: 114px;
  border-radius: 4px;
}

#popup-wrapper .project-popup {
  position: fixed;
  z-index: 999;
  background: #fff;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  overflow-y: auto;
  padding: 16px;
  align-items: flex-start;
}

#popup-wrapper .project-popup * {
  transition: all 0.6s;
}

footer .social-links {
  margin: 58px 0 20px 0;
}

footer a.email {
  text-decoration: none;
  font-size: 20px;
  line-height: 32px;
  color: #42526e;
  height: 189px;
  justify-content: center;
}

/* General CSS */
.center-text {
  text-align: center;
}

.green-text {
  color: var(--theme-green-color);
}

.d-flex {
  display: flex;
}

.flex-cols {
  flex-direction: column;
}

.d-inline-flex {
  display: inline-flex;
}

.flex-center {
  align-items: center;
  justify-content: center;
}

.self-center {
  align-self: center;
}

.card {
  border-radius: 8px;
  overflow: hidden;
  margin-bottom: 24px;
  border: 1px solid var(--card-border-color);
}

.hidden-scrollbar {
  overflow: hidden;
}

.hidden-scrollbar::-webkit-scrollbar {
  visibility: hidden;
}

/* Animations */

.animate-pulse {
  animation-duration: 0.75s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-name: heart-pulse;
}

.animate-shadow:hover {
  animation: animate-shadow 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
}

@keyframes heart-pulse {
  from {
    font-size: 100%;
  }

  to {
    font-size: 110%;
  }
}

@keyframes welcome {
  0%,
  50%,
  100% {
    opacity: 1;
  }

  25%,
  75% {
    opacity: 0;
  }
}

@-webkit-keyframes animate-shadow {
  0% {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
  }

  100% {
    -webkit-transform: translateZ(50px);
    transform: translateZ(50px);
    -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.35);
    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.35);
  }
}

@keyframes animate-shadow {
  0% {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
  }

  100% {
    -webkit-transform: translateZ(50px);
    transform: translateZ(50px);
    -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.35);
    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.35);
  }
}
/* ... */

